📝 drawer click open

--- a/20230609Lego반응형/index.html
+++ b/20230609Lego반응형/index.html
@@ -108,9 +108,9 @@
       <div class="side-big-menu-list">
         <i class="fa-regular fa-face-smile"></i>
         <span>레고 브랜드 소개</span>
-        <i class="fa-solid fa-chevron-down drawer-opener"></i>
+        <i class="fa-solid fa-chevron-down drawer-opener2"></i>
       </div>
-      <ul class="side-menu-list drawer">
+      <ul class="side-menu-list drawer2">
         <li class="side-menu-item"><a href="">기업가치</a></li>
         <li class="side-menu-item"><a href="">레고 앱</a></li>
         <li class="side-menu-item"><a href="">레고 매거진</a></li>
@@ -122,9 +122,9 @@
       <div class="side-big-menu-list">
         <i class="fa-solid fa-circle-info"></i>
         <span>고객 지원</span>
-        <i class="fa-solid fa-chevron-down drawer-opener"></i>
+        <i class="fa-solid fa-chevron-down drawer-opener3"></i>
       </div>
-      <ul class="side-menu-list drawer">
+      <ul class="side-menu-list drawer3">
         <li class="side-menu-item"><a href="">주문 현황 확인</a></li>
         <li class="side-menu-item"><a href="">배송 및 반품</a></li>
         <li class="side-menu-item"><a href="">스토어 검색</a></li>
