--- a/20230614if문/index.html
+++ b/20230614if문/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="if, javascript">
+  <meta name="description" content="if문의 조건이 참 또는 거짓인지 판별하고 그 결과에 따라 분기하는 코드를 만들 수 있다.">
+  <meta name="keywords" content="if, 분기문, 참, 거짓, 조건, javascript">
   <meta name="author" content="kai">
   <title>if 문법 연습</title>
 </head>
