--- a/20230616윈도우객체/index.html
+++ b/20230616윈도우객체/index.html
@@ -12,6 +12,12 @@
 <body>
   <div class="wrapper">
 
+    <span id="si"></span>
+    :
+    <span id="bun"></span>
+    :
+    <span id="cho"></span>
+
   </div>
   <script src="./javascript/script.js"></script>
 </body>
