--- a/20230616윈도우객체/index.html
+++ b/20230616윈도우객체/index.html
@@ -17,6 +17,8 @@
     <span id="bun"></span>
     :
     <span id="cho"></span>
+    :
+    <span id="mcho"></span>
 
   </div>
   <script src="./javascript/script.js"></script>
