--- a/20230616윈도우객체/index.html
+++ b/20230616윈도우객체/index.html
@@ -20,6 +20,8 @@
     :
     <span id="mcho"></span>
 
+    <button id="saero" type="button">페이지 새로고침</button>
+
   </div>
   <script src="./javascript/script.js"></script>
 </body>
