--- a/20230616윈도우객체/index.html
+++ b/20230616윈도우객체/index.html
@@ -8,6 +8,7 @@
   <meta name="author" content="kai">
   <title>Window 객체 연습</title>
   <link rel="stylesheet" href="./CSS/style.css">
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="wrapper">
@@ -24,5 +25,9 @@
 
   </div>
   <script src="./javascript/script.js"></script>
+  <script>
+    // #a1, #a2 ... #a100 전체 부르기
+    // for(i=1; i<101; i++){ $("#a"+i) }
+  </script>
 </body>
 </html>
