--- a/20230616윈도우객체/index.html
+++ b/20230616윈도우객체/index.html
@@ -28,6 +28,9 @@
   <script>
     // #a1, #a2 ... #a100 전체 부르기
     // for(i=1; i<101; i++){ $("#a"+i) }
-  </script>
+  
+    // $(선택자).명령어(); 함수
+    // $(선택자).이벤트($().명령어 또는 익명(function(){}) 함수);
+ </script>
 </body>
 </html>
