--- a/20230616윈도우객체/index.html
+++ b/20230616윈도우객체/index.html
@@ -30,7 +30,13 @@
     // for(i=1; i<101; i++){ $("#a"+i) }
   
     // $(선택자).명령어(); 함수
-    // $(선택자).이벤트($().명령어 또는 익명(function(){}) 함수);
- </script>
+    // $(선택자).이벤트($().명령어() 또는 익명(function(){}) 함수);
+
+    // $(this).hide()     this 대명사  > 모든 요소를 숨겨라
+    // $("p").hide()                  > 모든 p 태그를 숨겨라
+    // $("#apple").hide()
+    // $(".banana").hide()   
+
+  </script>
 </body>
 </html>
