--- a/20230619variable/index.html
+++ b/20230619variable/index.html
@@ -9,7 +9,10 @@
   <title>variable</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <div id="num">0</div>
+    <button id="increase">증가</button>
+  </div>
   <script src="./script.js"></script>
 </body>
 </html>
