📝 감소 버튼 추가

--- a/20230619variable/index.html
+++ b/20230619variable/index.html
@@ -12,6 +12,7 @@
   <div id="app">
     <div id="num">0</div>
     <button id="increase">증가</button>
+    <button id="decrease">감소</button>
   </div>
   <script src="./script.js"></script>
 </body>
