--- a/20230619variable/index.html
+++ b/20230619variable/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="app">
-    <div id="num">0</div>
+    <div id="content">0</div>
     <button id="increase">증가</button>
     <button id="decrease">감소</button>
   </div>
