--- a/20230619최저시급계산기/index.html
+++ b/20230619최저시급계산기/index.html
@@ -12,7 +12,7 @@
   <div class="wrapper">
     <div id="app">
       <!-- 시간 -->
-      <input id="tiem" type="number" placeholder="몇 시간 근무하셨나요?">
+      <input id="time" type="number" value="0" placeholder="몇 시간 근무하셨나요?">
       <!-- 최저 시급 -->
       <p id="salary">9620</p>
       <!-- 하루 시급 -->
