--- a/20230619최저시급계산기/index.html
+++ b/20230619최저시급계산기/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="wrapper">
+    <h1>최저시급계산기</h1>
     <div id="app">
       <!-- 시간 -->
       <input id="time" type="number" value="0" placeholder="몇 시간 근무하셨나요?">
