--- a/20230619최저시급계산기/index.html
+++ b/20230619최저시급계산기/index.html
@@ -9,9 +9,14 @@
   <title>최저시급계산기</title>
 </head>
 <body>
+  <style>
+    :root{
+      --gray: gray;
+    }
+  </style>
   <div class="wrapper">
     <h1>최저시급계산기</h1>
-    <div id="app">
+    <div id="app" style="background:var(--gray);">
       <!-- 시간 -->
       <input id="time" type="number" value="0" placeholder="몇 시간 근무하셨나요?">
       <!-- 최저 시급 -->
