--- a/20230620Navigation/index.html
+++ b/20230620Navigation/index.html
@@ -11,10 +11,18 @@
 </head>
 <body>
   <div class="wrapper">
-    <main>
-      <header>
+    <main class="container">
+      <header class="site-header">
         <nav>
+          <!-- 검색엔진 최적화, 시멘틱 마크업 고려 필요 -->
           <h1>Site Logo</h1>
+          <!-- ordered list -->
+          <!-- <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ol> -->
+          <!-- unordered list -->
           <ul>
             <li>회사소개</li>
             <li>제품소개</li>
