--- a/20230620Navigation/index.html
+++ b/20230620Navigation/index.html
@@ -23,11 +23,11 @@
             <li></li>
           </ol> -->
           <!-- unordered list -->
-          <ul>
-            <li>회사소개</li>
-            <li>제품소개</li>
-            <li>고객센터</li>
-            <li>연락처</li>
+          <ul class="list">
+            <li class="list-item active">회사소개</li>
+            <li class="list-item">제품소개</li>
+            <li class="list-item">고객센터</li>
+            <li class="list-item ">연락처</li>
           </ul>
         </nav>
       </header>
