--- a/20230621PageNavigation/index.html
+++ b/20230621PageNavigation/index.html
@@ -13,13 +13,13 @@
   <div class="wrapper">
     <main id="app">
       <div class="container">
-        <div class="page">1</div>
-        <div class="page">2</div>
-        <div class="page">3</div>
-        <div class="page">4</div>
+        <div class="page active"></div>
+        <div class="page"></div>
+        <div class="page"></div>
+        <div class="page"></div>
       </div>
       <nav class="nav">
-        <button class="button">Button1</button>
+        <button class="button active">Button1</button>
         <button class="button">Button2</button>
         <button class="button">Button3</button>
         <button class="button">Button4</button>
