--- a/20230621PageNavigation/index.html
+++ b/20230621PageNavigation/index.html
@@ -13,10 +13,30 @@
   <div class="wrapper">
     <main id="app">
       <div class="container">
-        <div class="page active"></div>
-        <div class="page"></div>
-        <div class="page"></div>
-        <div class="page"></div>
+        <div class="page active">
+          <div class="content">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat dicta. Eaque hic nobis ipsam? Dicta quaerat laborum quasi et libero rem repudiandae omnis. Cupiditate omnis eaque corrupti quos dolores.</p>
+          </div>
+        </div>
+        <div class="page">
+          <div class="content">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat dicta. Eaque hic nobis ipsam? Dicta quaerat laborum quasi et libero rem repudiandae omnis. Cupiditate omnis eaque corrupti quos dolores.</p>
+          </div>
+        </div>
+        <div class="page">
+          <div class="content">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat dicta. Eaque hic nobis ipsam? Dicta quaerat laborum quasi et libero rem repudiandae omnis. Cupiditate omnis eaque corrupti quos dolores.</p>
+          </div>
+        </div>
+        <div class="page">
+          <div class="content">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat dicta. Eaque hic nobis ipsam? Dicta quaerat laborum quasi et libero rem repudiandae omnis. Cupiditate omnis eaque corrupti quos dolores.</p>
+          </div>
+        </div>
       </div>
       <nav class="nav">
         <button class="button active">Button1</button>
