--- a/20230621PageNavigation/index.html
+++ b/20230621PageNavigation/index.html
@@ -16,7 +16,13 @@
         <div class="page active">
           <div class="content">
             <h2>Lorem ipsum</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat dicta. Eaque hic nobis ipsam? Dicta quaerat laborum quasi et libero rem repudiandae omnis. Cupiditate omnis eaque corrupti quos dolores.</p>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+          </div>
+        </div>
+        <div class="page">
+          <div class="content">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat dicta. Eaque hic nobis ipsam? Dicta quaerat laborum quasi et libero rem repudiandae omnis. Cupiditate omnis eaqu.</p>
           </div>
         </div>
         <div class="page">
@@ -28,13 +34,7 @@
         <div class="page">
           <div class="content">
             <h2>Lorem ipsum</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat dicta. Eaque hic nobis ipsam? Dicta quaerat laborum quasi et libero rem repudiandae omnis. Cupiditate omnis eaque corrupti quos dolores.</p>
-          </div>
-        </div>
-        <div class="page">
-          <div class="content">
-            <h2>Lorem ipsum</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat dicta. Eaque hic nobis ipsam? Dicta quaerat laborum quasi et libero rem repudiandae omnis. Cupiditate omnis eaque corrupti quos dolores.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, placeat dicta. Eaque hic nobis ipsam? Dicta quaerat laborum quasi et libero rem repudiandae omnis. Cupiditate.</p>
           </div>
         </div>
       </div>
