--- a/20230621MouseMov/index.html
+++ b/20230621MouseMov/index.html
@@ -12,7 +12,9 @@
 <body>
   <div class="wrapper">
     <main id="app">
-      <div id="pointer"></div>
+      <div id="pointer">
+        <span id="bubble"></span>
+      </div>
     </main>
   </div>
   <script src="./script.js"></script>
