--- a/20230621MouseMov/index.html
+++ b/20230621MouseMov/index.html
@@ -13,7 +13,7 @@
   <div class="wrapper">
     <main id="app">
       <div id="pointer">
-        <span id="bubble"></span>
+        <span class="bubble"></span>
       </div>
     </main>
   </div>
