--- a/20230622Dataset/index.html
+++ b/20230622Dataset/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="" content="">
-  <meta name="" content="">
-  <meta name="" content="">
+  <meta name="description" content="Dataset">
+  <meta name="keywords" content="html, CSS, javascript">
+  <meta name="author" content="kai">
   <title>Dataset</title>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -13,7 +13,7 @@
   <div class="wrapper">
     <main id="app">
       <div class="container">
-        <span class="number"></span>
+        <span class="number">50</span>
         <div class="graph">
           <div class="bar" data-number="50"></div>
         </div>
