--- a/20230622Dataset/index.html
+++ b/20230622Dataset/index.html
@@ -18,6 +18,18 @@
           <div class="bar" data-number="20"></div>
         </div>
       </div>
+      <div class="container">
+        <span class="number">50</span>
+        <div class="graph">
+          <div class="bar" data-number="50"></div>
+        </div>
+      </div>
+      <div class="container">
+        <span class="number">50</span>
+        <div class="graph">
+          <div class="bar" data-number="80"></div>
+        </div>
+      </div>
     </main>
   </div>
   <script src="./script.js"></script>
