--- a/20230623SetInterval/index.html
+++ b/20230623SetInterval/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Set Interval">
-  <meta name="keywords" content="html, CSS, javsscript">
+  <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
   <title>Set Interval</title>
   <link rel="stylesheet" href="./style.css">
