--- a/20230623SetInterval/index.html
+++ b/20230623SetInterval/index.html
@@ -17,6 +17,7 @@
         <button id="start">start</button>
         <button id="stop">stop</button>
       </div>
+      <ul id="list"></ul>
     </main>
   </div>
   <script src="./script.js"></script>
