--- a/20230623forEach/index.html
+++ b/20230623forEach/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
   <main id="app">
-
+    <div class="wrapper">
+      
+    </div>
   </main>
   <script src="./script.js"></script>
 </body>
