--- a/20230623TodoList/index.html
+++ b/20230623TodoList/index.html
@@ -13,7 +13,7 @@
   <main id="app">
     <div class="list-container">
       <header id="header">
-        <h1>To Do List</h1>
+        <h1><iconify-icon icon="line-md:check-list-3-filled"></iconify-icon>To Do List</h1>
         <div class="input-wrapper">
           <input id="add-todo" type="text" placeholder="해야 할 일을 입력하세요.">
           <button id="add-button">추가</button>
@@ -27,6 +27,8 @@
       </ul>
     </div>
   </main>
+  <!-- iconify -->
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <script src="./script.js"></script>
 </body>
 </html>
