--- a/20230623TodoList/index.html
+++ b/20230623TodoList/index.html
@@ -13,7 +13,7 @@
   <main id="app">
     <div class="list-container">
       <header id="header">
-        <h1><iconify-icon icon="line-md:check-list-3-filled"></iconify-icon>To Do List</h1>
+        <h1><iconify-icon icon="line-md:check-list-3-filled" style="color: red;"></iconify-icon>To Do List┘</h1>
         <div class="input-wrapper">
           <input id="add-todo" type="text" placeholder="해야 할 일을 입력하세요.">
           <button id="add-button">추가</button>
@@ -22,7 +22,7 @@
       <ul id="list">
         <li class="list-item">
           오늘 해야 할 일
-          <button class="list-delete">삭제</button>
+          <button class="list-delete">&#x2716</button>
         </li>
       </ul>
     </div>
