--- a/20230626test2/index.html
+++ b/20230626test2/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <main>
+    <main id="app">
       <button id="start">start</button>
       <button id="stop">stop</button>
     </main>
