📝 addClassList if else setTimeout

--- a/20230626test2/index.html
+++ b/20230626test2/index.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="" content="">
-  <meta name="" content="">
-  <meta name="" content="">
+  <meta name="description" content="test">
+  <meta name="keywords" content="html, CSS, javascript">
+  <meta name="author" content="kai">
   <title>test</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
     <main id="app">
-      <button id="start">start</button>
-      <button id="stop">stop</button>
+      <h1 id="title">제목의 크기를 증가, 감소 시켜 보세요.</h1>
+      <button id="plus">1px 증가</button>
+      <button id="minus">1px 감소</button>
+      <button id="change">색깔 변경</button>
     </main>
   </div>
   <script src="./script.js"></script>
