--- a/20230626Accordion/index.html
+++ b/20230626Accordion/index.html
@@ -11,20 +11,20 @@
   <div class="wrapper">
     <main id="app">
       <ul class="list">
-        <li class="list__item">
-          <button class="list__button">List Title</button>
+        <li class="list__item active">
+          <button class="list__button">List Title<iconify-icon class="icon" icon="line-md:chevron-up" flip="vertical"></iconify-icon></button>
           <div class="list__content">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil iste aliquam placeat quisquam neque tempore. Labore, beatae sunt cupiditate dolorum voluptatem quos aliquam aspernatur eos fugiat assumenda, obcaecati recusandae quod.
           </div>
         </li>
         <li class="list__item">
-          <button class="list__button">List Title</button>
+          <button class="list__button">List Title<iconify-icon class="icon" icon="line-md:chevron-up" flip="vertical"></iconify-icon></button>
           <div class="list__content">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil iste aliquam placeat quisquam neque tempore. Labore, beatae sunt cupiditate dolorum voluptatem quos aliquam aspernatur eos fugiat assumenda, obcaecati recusandae quod.
           </div>
         </li>
         <li class="list__item">
-          <button class="list__button">List Title</button>
+          <button class="list__button">List Title<iconify-icon class="icon" icon="line-md:chevron-up" flip="vertical"></iconify-icon></button>
           <div class="list__content">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil iste aliquam placeat quisquam neque tempore. Labore, beatae sunt cupiditate dolorum voluptatem quos aliquam aspernatur eos fugiat assumenda, obcaecati recusandae quod.
           </div>
@@ -32,6 +32,7 @@
       </ul>
     </main>
   </div>
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <script src="./script.js"></script>
 </body>
 </html>
