--- a/20230626Accordion/index.html
+++ b/20230626Accordion/index.html
@@ -29,6 +29,12 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil iste aliquam placeat quisquam neque tempore. Labore, beatae sunt cupiditate dolorum voluptatem quos aliquam aspernatur eos fugiat assumenda, obcaecati recusandae quod.
           </div>
         </li>
+        <li class="list__item">
+          <button class="list__button">List Title<iconify-icon class="icon" icon="line-md:chevron-up" flip="vertical"></iconify-icon></button>
+          <div class="list__content">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil iste aliquam placeat quisquam neque tempore. Labore, beatae sunt cupiditate dolorum voluptatem quos aliquam aspernatur eos fugiat assumenda, obcaecati recusandae quod.
+          </div>
+        </li>
       </ul>
     </main>
   </div>
