--- a/20230627SwitchToggle/index.html
+++ b/20230627SwitchToggle/index.html
@@ -14,6 +14,7 @@
     <div class="toggle-container">
       <label for="toggle">토글스위치</label>
       <input id="toggle" type="checkbox">
+      <span class="switch"></span>
     </div>
   </div>
   <script src="./script.js"></script>
