--- a/20230627Snow/index.html
+++ b/20230627Snow/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <main id="wrapper">
-    <span class="snow"></span>
+    <!-- <span class="snow"></span> -->
   </main>
   <script src="./script.js"></script>
 </body>
