--- a/20230628AOS/index.html
+++ b/20230628AOS/index.html
@@ -8,29 +8,38 @@
   <meta name="author" content="kai">
   <title></title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
   <div class="wrapper">
     <main id="app">
       <section>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
+        <p data-aos="fade-up"
+        data-aos-anchor-placement="bottom-bottom">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
       </section>
       <section>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
+        <p data-aos="fade-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
       </section>
       <section>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
+        <p data-aos="flip-left"
+        data-aos-easing="ease-out-cubic"
+        data-aos-duration="2000">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
       </section>
       <section>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
+        <p data-aos="fade-up-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
       </section>
       <section>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
+        <p data-aos="flip-up">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
       </section>
       <section>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
+        <p data-aos="zoom-in-up">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, commodi? Repellendus voluptas voluptatum modi deserunt sint voluptate adipisci aliquam veritatis molestiae tempora voluptatibus, sit nostrum incidunt, quidem hic quod aliquid.</p>
       </section>
     </main>
   </div>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- AOS 초기화 -->
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
