--- a/20230628AOS/index.html
+++ b/20230628AOS/index.html
@@ -39,7 +39,8 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <!-- AOS 초기화 -->
   <script>
-    AOS.init();
+    // AOS.init();
+    AOS.init({duration:500});
   </script>
 </body>
 </html>
