--- a/Project01/index.html
+++ b/Project01/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="그림판 연습">
+  <meta name="description" content="프로젝트01">
   <meta name="keywords" content="html, CSS, script">
   <meta name="author" content="kai">
   <title>Document</title>
