--- a/20230703반응형/index.html
+++ b/20230703반응형/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="" content="">
-  <meta name="" content="">
-  <meta name="" content="">
+  <meta name="description" content="반응형">
+  <meta name="keywords" content="html, CSS, script">
+  <meta name="author" content="kai">
   <title></title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
-
+    
   </div>
   <script src="./script.js"></script>
 </body>
