--- a/20230703반응형(calc)/index.html
+++ b/20230703반응형(calc)/index.html
@@ -8,10 +8,31 @@
   <meta name="author" content="kai">
   <title></title>
   <link rel="stylesheet" href="./style.css">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/6105f934ac.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <div class="wrapper">
-    
+    <h1 class="title">천지 반점</h1>
+    <a class="menu_box" href="">
+      <div class="img_box">
+        <img src="./images/pic1.jpg" alt="경장육사">
+      </div>
+      <div class="menu_txt">
+        <p class="menu_title">경장육사</p>
+        <div class="menu_info">
+          <p class="date">
+            <i class="fa-solid fa-calendar-days"></i>
+            2023-07-03
+          </p>
+          <p class="count">
+            <i class="fa-solid fa-eye"></i>
+            1
+          </p>
+        </div>
+      </div>
+    </a>
   </div>
   <script src="./script.js"></script>
 </body>
