💄 menu box 1more complite

--- a/20230703반응형(calc)/index.html
+++ b/20230703반응형(calc)/index.html
@@ -14,13 +14,15 @@
 </head>
 <body>
   <div class="wrapper">
-    <h1 class="title">천지 반점</h1>
+    <h1 class="title">
+      👑 황제 반점
+    </h1>
     <a class="menu_box" href="">
       <div class="img_box">
         <img src="./images/pic1.jpg" alt="경장육사">
       </div>
       <div class="menu_txt">
-        <p class="menu_title">경장육사</p>
+        <p class="menu_title">경장육사경장육사경장육사경장육사경장육사</p>
         <div class="menu_info">
           <p class="date">
             <i class="fa-solid fa-calendar-days"></i>
@@ -34,6 +36,7 @@
       </div>
     </a>
   </div>
+  <!-- 묶을 태그 드래그 ctrl+shift+p wrap -->
   <script src="./script.js"></script>
 </body>
 </html>
