📝 ctrl+shift+p wrap menu_box_wrapper

--- a/20230703반응형(calc)/index.html
+++ b/20230703반응형(calc)/index.html
@@ -17,26 +17,226 @@
     <h1 class="title">
       👑 황제 반점
     </h1>
-    <a class="menu_box" href="">
-      <div class="img_box">
-        <img src="./images/pic1.jpg" alt="경장육사">
-      </div>
-      <div class="menu_txt">
-        <p class="menu_title">경장육사경장육사경장육사경장육사경장육사</p>
-        <div class="menu_info">
-          <p class="date">
-            <i class="fa-solid fa-calendar-days"></i>
-            2023-07-03
-          </p>
-          <p class="count">
-            <i class="fa-solid fa-eye"></i>
-            1004
-          </p>
+    <div class="menu_box_wrapper">  
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic1.jpg" alt="경장육사">
         </div>
-      </div>
-    </a>
+        <div class="menu_txt">
+          <p class="menu_title">경장육사경장육사경장육사경장육사경장육사</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              1004
+            </p>
+          </div>
+        </div>
+      </a>
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic2.jpg" alt="워샹로우쓰">
+        </div>
+        <div class="menu_txt">
+          <p class="menu_title">워샹로우쓰</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              562
+            </p>
+          </div>
+        </div>
+      </a>
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic3.jpg" alt="공심채">
+        </div>
+        <div class="menu_txt">
+          <p class="menu_title">공심채</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              897
+            </p>
+          </div>
+        </div>
+      </a>
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic4.jpg" alt="마라롱샤">
+        </div>
+        <div class="menu_txt">
+          <p class="menu_title">마라롱샤</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              1555
+            </p>
+          </div>
+        </div>
+      </a>
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic5.jpg" alt="우육면">
+        </div>
+        <div class="menu_txt">
+          <p class="menu_title">우육면</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              788
+            </p>
+          </div>
+        </div>
+      </a>
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic6.jpg" alt="훈둔">
+        </div>
+        <div class="menu_txt">
+          <p class="menu_title">훈둔</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              665
+            </p>
+          </div>
+        </div>
+      </a>
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic7.jpg" alt="샤오롱바오">
+        </div>
+        <div class="menu_txt">
+          <p class="menu_title">샤오롱바오</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              354
+            </p>
+          </div>
+        </div>
+      </a>
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic8.jpg" alt="짜장면">
+        </div>
+        <div class="menu_txt">
+          <p class="menu_title">짜장면</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              651
+            </p>
+          </div>
+        </div>
+      </a>
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic9.jpg" alt="차오마미엔">
+        </div>
+        <div class="menu_txt">
+          <p class="menu_title">차오마미엔</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              222
+            </p>
+          </div>
+        </div>
+      </a>
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic10.jpg" alt="지삼선">
+        </div>
+        <div class="menu_txt">
+          <p class="menu_title">지삼선</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              985
+            </p>
+          </div>
+        </div>
+      </a>
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic11.jpg" alt="꿔바로우">
+        </div>
+        <div class="menu_txt">
+          <p class="menu_title">꿔바로우</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              1002
+            </p>
+          </div>
+        </div>
+      </a>
+      <a class="menu_box" href="">
+        <div class="img_box">
+          <img src="./images/pic12.jpg" alt="마파두부">
+        </div>
+        <div class="menu_txt">
+          <p class="menu_title">마파두부</p>
+          <div class="menu_info">
+            <p class="date">
+              <i class="fa-solid fa-calendar-days"></i>
+              2023-07-03
+            </p>
+            <p class="count">
+              <i class="fa-solid fa-eye"></i>
+              1875
+            </p>
+          </div>
+        </div>
+      </a>
+    </div>
   </div>
-  <!-- 묶을 태그 드래그 ctrl+shift+p wrap -->
+  <!-- 묶을 태그 드래그 ctrl+shift+p wrap 감쌀태그이름 -->
   <script src="./script.js"></script>
 </body>
 </html>
