--- a/20230609Lego반응형/TCindex.html
+++ b/20230609Lego반응형/TCindex.html
@@ -189,7 +189,8 @@
 
   <div class="overlay"></div>
 
-  <script src="./js/TCsidebar.js"></script>
+  <!-- <script src="./js/TCsidebar.js"></script> -->
+  <script src="./js/TCsidebar(jQuery).js"></script>
   <script src="./js/TCsidebar-drawer.js"></script>
 </body>
 
