📝 jQuery side-bar drawer toggle

--- a/20230609Lego반응형/TCindex.html
+++ b/20230609Lego반응형/TCindex.html
@@ -191,7 +191,8 @@
 
   <!-- <script src="./js/TCsidebar.js"></script> -->
   <script src="./js/TCsidebar(jQuery).js"></script>
-  <script src="./js/TCsidebar-drawer.js"></script>
+  <!-- <script src="./js/TCsidebar-drawer.js"></script> -->
+  <script src="./js/TCsidebar-drawer(jQuery).js"></script>
+  
 </body>
-
 </html>
