--- a/Javascript/20230704querySelectorAll.html
+++ b/Javascript/20230704querySelectorAll.html
@@ -48,7 +48,8 @@
     //   document.writeln(names);
     // })
     names.forEach(function(name){
-      document.write(`<h1>${name}</h1>`);
+      document.write(`<h1 style='color:red'>${name}</h1>`);
+      document.write(`<h1 style='background-color:gray'>${name}</h1>`);
       document.write('<h2>'+name+'</h2>');
     })
 
