--- a/20230705 Github Profile/images/index.html
+++ b/20230705 Github Profile/images/index.html
@@ -11,7 +11,33 @@
 </head>
 <body>
   <div class="wrapper">
+    <div class="kai"><img src="./kai.gif" alt=""></div>
 
+    <div class="drawer-menu hidden">
+      <div class="drawer-menu-title">
+        Signed in as <a href="https://github.com/biabamroi">kai</a>
+      </div>
+      <hr>
+      <ul class="drawer-menu-your">
+        <li class="drawer-menu-your-content"><a href="">Your profile</a></li>
+        <li class="drawer-menu-your-content"><a href="">Your repositories</a></li>
+        <li class="drawer-menu-your-content"><a href="">Your projects</a></li>
+        <li class="drawer-menu-your-content"><a href="">Your stars</a></li>
+        <li class="drawer-menu-your-content"><a href="">Your gists</a></li>
+        <li class="drawer-menu-your-content"><a href="">Your Sponsors</a></li>
+      </ul>
+      <hr>
+      <ul class="drawer-menu-settings">
+        <li class="drawer-menu-settings-content"><a href="">Upgrade</a></li>
+        <li class="drawer-menu-settings-content"><a href="">Try Enterprise</a></li>
+        <li class="drawer-menu-settings-content"><a href="">Help</a></li>
+        <li class="drawer-menu-settings-content"><a href="">Settings</a></li>
+      </ul>
+      <hr>
+      <div class="logout"><a href="">Sign out</a></div>
+    </div>
+    <div class="arrow"></div>
+    <div class="overlay"></div>
   </div>
   <script src="./script.js"></script>
 </body>
