--- a/20230705 Github Profile/images/index.html
+++ b/20230705 Github Profile/images/index.html
@@ -36,7 +36,7 @@
       <hr>
       <div class="logout"><a href="">Sign out</a></div>
     </div>
-    <div class="arrow"></div>
+    <div class="arrow hidden"></div>
     <div class="overlay"></div>
   </div>
   <script src="./script.js"></script>
