--- a/20230705 Github Profile/index.html
+++ b/20230705 Github Profile/index.html
@@ -14,7 +14,7 @@
     <div class="dropdown">
       
       <button class="dropdown-btn" type="button">
-        <img src="./images/kai.gif" alt="Kai">
+        <a href=""><img src="./images/kai.gif" alt="Kai"></a>
       </button>
 
       <div class="dropdown-menu">
