--- a/20230706slide/slide1/index.html
+++ b/20230706slide/slide1/index.html
@@ -6,12 +6,23 @@
   <meta name="description" content="slide">
   <meta name="keywords" content="html, CSS, script">
   <meta name="author" content="kai">
-  <title>slide</title>
+  <title>image slide</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
-
+    <div class="slide-wrapper">
+      <ul class="slide-list">
+        <li class="slide-item"><img src="../images/rock1.jpg" alt="돌과 우주"></li>
+        <li class="slide-item"><img src="../images/space1.jpg" alt="캠프와 우주"></li>
+        <li class="slide-item"><img src="../images/space2.jpg" alt="우주"></li>
+      </ul>
+    </div>
+    <div class="btn-group">
+      <button class="btn1" type="button">1</button>
+      <button class="btn2" type="button">2</button>
+      <button class="btn3" type="button">3</button>
+    </div>
   </div>
   <script src="./script.js"></script>
 </body>
