--- a/20230706slide/slide1/index.html
+++ b/20230706slide/slide1/index.html
@@ -20,10 +20,14 @@
     </div>
     <div class="btn-group">
       <button class="btn1" type="button">1</button>
+      <!-- <button class="btn1" type="button" onclick="Btn1()">1</button> -->
       <button class="btn2" type="button">2</button>
+      <!-- <button class="btn2" type="button" onclick="Btn2()">2</button> -->
       <button class="btn3" type="button">3</button>
+      <!-- <button class="btn3" type="button" onclick="Btn3()">3</button> -->
     </div>
   </div>
-  <script src="./script.js"></script>
+  <!-- <script src="./script.js"></script> -->
+  <script src="./script(forEach).js"></script>
 </body>
 </html>
