--- a/20230706slide/slide2/index.html
+++ b/20230706slide/slide2/index.html
@@ -3,15 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="slide">
+  <meta name="description" content="slide2">
   <meta name="keywords" content="html, CSS, script">
   <meta name="author" content="kai">
-  <title>slide</title>
+  <title>image slide2</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
-
+    <div class="slide-wrapper">
+      <ul class="slide-list">
+        <li class="slide-item"><img src="../images/rock1.jpg" alt="돌과 우주"></li>
+        <li class="slide-item"><img src="../images/space1.jpg" alt="캠프와 우주"></li>
+        <li class="slide-item"><img src="../images/space2.jpg" alt="우주"></li>
+      </ul>
+    </div>
+    <div class="btn-group">
+      <button class="btn1" type="button"></button>
+      <button class="btn2" type="button"></button>
+      <button class="btn3" type="button"></button>
+    </div>
   </div>
   <script src="./script.js"></script>
 </body>
