--- a/20230706slide/slide2/index.html
+++ b/20230706slide/slide2/index.html
@@ -6,6 +6,8 @@
   <meta name="description" content="slide2">
   <meta name="keywords" content="html, CSS, script">
   <meta name="author" content="kai">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/6105f934ac.js" crossorigin="anonymous"></script>
   <title>image slide2</title>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -18,6 +20,8 @@
         <li class="slide-item"><img src="../images/space2.jpg" alt="우주"></li>
       </ul>
     </div>
+    <div class="side-button-left"><i class="fa-solid fa-circle-arrow-left fa-2xl"></i></div>
+    <div class="side-button-right"><i class="fa-solid fa-circle-arrow-right fa-2xl"></i></div>
     <div class="btn-group">
       <button class="btn1" type="button"></button>
       <button class="btn2" type="button"></button>
