--- a/20230706slide/slide3/index.html
+++ b/20230706slide/slide3/index.html
@@ -20,8 +20,8 @@
         <li class="slide-item"><img src="../images/space2.jpg" alt="우주"></li>
       </ul>
     </div>
-    <div class="side-button-left"><i class="fa-solid fa-circle-arrow-left fa-2xl"></i></div>
-    <div class="side-button-right"><i class="fa-solid fa-circle-arrow-right fa-2xl"></i></div>
+    <div class="side-button-left"><i class="fa-solid fa-circle-chevron-left fa-2xl"></i></div>
+    <div class="side-button-right"><i class="fa-solid fa-circle-chevron-right fa-2xl"></i></i></div>
   </div>
   <script src="./script.js"></script>
 </body>
