--- a/Javascript/20230710연산자.html
+++ b/Javascript/20230710연산자.html
@@ -39,6 +39,20 @@
       // 조건 false (참이 아닐 경우)
       console.log('바보!')
     }
+
+    // 2. 논리 연산자 (or, and)
+    // or(A || B) : A 또는 B 중 하나라도 일치할 때
+    // ||(or 연산자)를 기준으로 우항, 좌항 중에 하나라도 참일 경우 true
+    // and(A && B) : A 그리고 B 둘 다 일치할 때
+    // &&(and 연산자)를 기준으로 모두 참일 경우 true
+    if (1 < 10 && 5 > 10){
+      console.log('정답yo')
+    }else{
+      console.log('멍청이')
+    }
+
+
+
   </script>
 </body>
 </html>
