--- a/20230710_Menu/menu1/index.html
+++ b/20230710_Menu/menu1/index.html
@@ -11,7 +11,58 @@
 </head>
 <body>
   <div class="wrapper">
-    
+    <header>
+      <nav>
+        <h1 class="visually-hidden">메뉴</h1>
+        <ul class="gnb">
+          <li><a href="">메인메뉴1</a>
+            <ul class="sub">
+              <li><a href="">서브메뉴1-1</a></li>
+              <li><a href="">서브메뉴1-2</a></li>
+              <li><a href="">서브메뉴1-3</a></li>
+              <li><a href="">서브메뉴1-4</a></li>
+              <li><a href="">서브메뉴1-5</a></li>
+            </ul>
+          </li>
+          <li><a href="">메인메뉴2</a>
+            <ul class="sub">
+              <li><a href="">서브메뉴2-1</a></li>
+              <li><a href="">서브메뉴2-2</a></li>
+              <li><a href="">서브메뉴2-3</a></li>
+              <li><a href="">서브메뉴2-4</a></li>
+              <li><a href="">서브메뉴2-5</a></li>
+            </ul>
+          </li>
+          <li><a href="">메인메뉴3</a>
+            <ul class="sub">
+              <li><a href="">서브메뉴3-1</a></li>
+              <li><a href="">서브메뉴3-2</a></li>
+              <li><a href="">서브메뉴3-3</a></li>
+              <li><a href="">서브메뉴3-4</a></li>
+              <li><a href="">서브메뉴3-5</a></li>
+            </ul>
+          </li>
+          <li><a href="">메인메뉴4</a>
+            <ul class="sub">
+              <li><a href="">서브메뉴4-1</a></li>
+              <li><a href="">서브메뉴4-2</a></li>
+              <li><a href="">서브메뉴4-3</a></li>
+              <li><a href="">서브메뉴4-4</a></li>
+              <li><a href="">서브메뉴4-5</a></li>
+            </ul>
+          </li>
+          <li><a href="">메인메뉴5</a>
+            <ul class="sub">
+              <li><a href="">서브메뉴5-1</a></li>
+              <li><a href="">서브메뉴5-2</a></li>
+              <li><a href="">서브메뉴5-3</a></li>
+              <li><a href="">서브메뉴5-4</a></li>
+              <li><a href="">서브메뉴5-5</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </div>
   <script src="./script.js"></script>
 </body>
