--- a/20230710_Menu/menu1/index.html
+++ b/20230710_Menu/menu1/index.html
@@ -6,6 +6,10 @@
   <meta name="description" content="MENU1">
   <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
+
+  <!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+  
   <title>Menu1</title>
   <link rel="stylesheet" href="./style.css">
 </head>
