--- a/20230710_Menu/menu1/index.html
+++ b/20230710_Menu/menu1/index.html
@@ -9,7 +9,7 @@
 
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-  
+
   <title>Menu1</title>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -68,6 +68,7 @@
       </nav>
     </header>
   </div>
-  <script src="./script.js"></script>
+  <!-- <script src="./JS/script.js"></script> -->
+  <script src="./JS/script(vanilla).js"></script>
 </body>
 </html>
