--- a/20230711_HSFF실습/index.html
+++ b/20230711_HSFF실습/index.html
@@ -19,9 +19,9 @@
       <nav>
         <h1 class="visually-hidden">로그인 메뉴</h1>
         <div class="log-in-bar">
-          <div id="login"><a href=""><i class="fa-regular fa-arrow-right-to-bracket"></i>로그인</a></div>
-          <div id="join"><a href=""><i class="fa-duotone fa-user-group"></i>회원가입</a></div>
-          <div id="password"><a href=""><i class="fa-thin fa-key"></i>아이디/비밀번호 찾기</a></div>
+          <div id="login"><a href=""><i class="fa-solid fa-arrow-right-to-bracket"></i>로그인</a></div>
+          <div id="join"><a href=""><i class="fa-solid fa-user-group"></i>회원가입</a></div>
+          <div id="password"><a href=""><i class="fa-solid fa-key"></i>아이디/비밀번호 찾기</a></div>
         </div>
         <h1 class="visually-hidden">메인 메뉴</h1>
         <div class="container">
