--- a/20230711_HSFF실습/index.html
+++ b/20230711_HSFF실습/index.html
@@ -61,6 +61,7 @@
               </ul>
             </li>
           </ul>
+          <h1 class="lnb-icon"><img src="./images/btn_nav.svg" alt="navi"></h1>
         </div>
       </nav>
     </header>
