--- a/20230711_HSFF실습/index.html
+++ b/20230711_HSFF실습/index.html
@@ -7,6 +7,9 @@
   <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
 
+  <!-- jQuery CDN -->
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/6105f934ac.js" crossorigin="anonymous"></script>
 
@@ -77,6 +80,9 @@
           <li class="slide-item"><img src="./images/img3.jpeg" alt="스트레칭하는 사람들"></li>
         </ul>
       </section>
+
+      <div class="box"></div>
+
       <div class="btn-group">
         <button class="btn1" type="button">첫번째</button>
         <button class="btn2" type="button">두번째</button>
