--- a/20230711_HSFF실습/index.html
+++ b/20230711_HSFF실습/index.html
@@ -69,8 +69,41 @@
       </nav>
     </header>
     
-    <div class="lnb-sub-menu">
-    </div>
+    <ul class="lnb-sub-menu">
+      <li><a href="">포럼소개</a>
+        <ul class="lnb-sub">
+          <li><a href="">취지문</a></li>
+          <li><a href="">주요사업</a></li>
+          <li><a href="">조직위원회</a></li>
+          <li><a href="">정관</a></li>
+          <li><a href="">건강기능식품연구회</a></li>
+        </ul>
+      </li>
+      <li><a href="">포럼신청</a>
+        <ul class="lnb-sub">
+          <li><a href="">포럼공지</a></li>
+          <li><a href="">포럼일정 및 참가</a></li>
+        </ul>
+      </li>
+      <li><a href="">포럼활동</a>
+        <ul class="lnb-sub">
+          <li><a href="">포럼자료</a></li>
+          <li><a href="">포토갤러리</a></li>
+        </ul>
+      </li>
+      <li><a href="">정보마당</a>
+        <ul class="lnb-sub">
+          <li><a href="">e-News</a></li>
+        </ul>
+      </li>
+      <li><a href="">고객센터</a>
+        <ul class="lnb-sub">
+          <li><a href="">공지사항</a></li>
+          <li><a href="">자주하는 질문</a></li>
+          <li><a href="">1:1 문의</a></li>
+        </ul>
+      </li>
+    </ul>
 
     <main id="app">
       <section class="slide">
@@ -114,6 +147,7 @@
     </footer>
 
     <aside></aside>
+    <div class="overlay"></div>
 
   </div>
   <script src="./js/script.js"></script>
