--- a/20230711_HSFF실습/index.html
+++ b/20230711_HSFF실습/index.html
@@ -18,19 +18,34 @@
 </head>
 <body>
   <div class="wrapper">
-    <header>
-      <nav>
-        <h1 class="visually-hidden">로그인 메뉴</h1>
-        <div class="log-in-bar">
-          <div id="login"><a href=""><i class="fa-solid fa-arrow-right-to-bracket"></i> 로그인</a></div>
-          <div id="join"><a href=""><i class="fa-solid fa-user-group"></i> 회원가입</a></div>
-          <div id="password"><a href=""><i class="fa-solid fa-key"></i> 아이디/비밀번호 찾기</a></div>
-        </div>
-        <h1 class="visually-hidden">메인 메뉴</h1>
-        <div class="container">
-          <h1 class="logo"><img src="./images/logo.svg" alt="logo"></h1>
-          <ul class="gnb">
-            <li><a href="">포럼소개</a>
+    <header class="global-header">
+
+      <ul class="gnb-log">
+        <li><a href="">
+          <i class="fa-solid fa-arrow-right-to-bracket"></i>
+          로그인
+        </a></li>
+        <li><a href="">
+          <i class="fa-solid fa-user-group"></i>
+          회원가입
+        </a></li>
+        <li><a href="">
+          <i class="fa-solid fa-key"></i>
+          아이디/비밀번호 찾기
+        </a></li>
+      </ul>
+
+      <div class="gnb-main">
+        <h1 class="logo">
+          <a href="">
+            <img src="./images/logo.svg" alt="HSFF로고">
+          </a>
+        </h1>
+
+        <nav>
+          <ul class="gnb-main-list lg-only">
+            <li class="gnb-main-item">
+              <a href="">포럼소개</a>
               <ul class="sub">
                 <li><a href="">취지문</a></li>
                 <li><a href="">주요사업</a></li>
@@ -39,115 +54,101 @@
                 <li><a href="">건강기능식품연구회</a></li>
               </ul>
             </li>
-            <li><a href="">포럼신청</a>
+            <li class="gnb-main-item">
+              <a href="">포럼신청</a>
               <ul class="sub">
                 <li><a href="">포럼공지</a></li>
                 <li><a href="">포럼일정 및 참가</a></li>
               </ul>
             </li>
-            <li><a href="">포럼활동</a>
+            <li class="gnb-main-item">
+              <a href="">포럼활동</a>
               <ul class="sub">
                 <li><a href="">포럼자료</a></li>
                 <li><a href="">포토갤러리</a></li>
               </ul>
             </li>
-            <li><a href="">정보마당</a>
+            <li class="gnb-main-item">
+              <a href="">정보마당</a>
               <ul class="sub">
                 <li><a href="">e-News</a></li>
               </ul>
             </li>
-            <li><a href="">고객센터</a>
+            <li class="gnb-main-item">
+              <a href="">고객센터</a>
               <ul class="sub">
                 <li><a href="">공지사항</a></li>
                 <li><a href="">자주하는 질문</a></li>
-                <li><a href="">1:1 문의</a></li>
+                <li><a href="">1:1문의</a></li>
               </ul>
             </li>
           </ul>
-          <h1 class="lnb-icon"><img src="./images/btn_nav.svg" alt="navi"></h1>
-        </div>
-      </nav>
+        </nav>
+
+        <button type="button" class="gnb-open-btn lg-hidden">
+          <img src="./images/btn_nav.svg" alt="메뉴 펼침 버튼">
+        </button>
+
+      </div>
     </header>
-    
-    <ul class="lnb-sub-menu">
-      <li><a href="">포럼소개</a>
-        <ul class="lnb-sub">
-          <li><a href="">취지문</a></li>
-          <li><a href="">주요사업</a></li>
-          <li><a href="">조직위원회</a></li>
-          <li><a href="">정관</a></li>
-          <li><a href="">건강기능식품연구회</a></li>
-        </ul>
-      </li>
-      <li><a href="">포럼신청</a>
-        <ul class="lnb-sub">
-          <li><a href="">포럼공지</a></li>
-          <li><a href="">포럼일정 및 참가</a></li>
-        </ul>
-      </li>
-      <li><a href="">포럼활동</a>
-        <ul class="lnb-sub">
-          <li><a href="">포럼자료</a></li>
-          <li><a href="">포토갤러리</a></li>
-        </ul>
-      </li>
-      <li><a href="">정보마당</a>
-        <ul class="lnb-sub">
-          <li><a href="">e-News</a></li>
-        </ul>
-      </li>
-      <li><a href="">고객센터</a>
-        <ul class="lnb-sub">
-          <li><a href="">공지사항</a></li>
-          <li><a href="">자주하는 질문</a></li>
-          <li><a href="">1:1 문의</a></li>
-        </ul>
-      </li>
-    </ul>
 
-    <main id="app">
-      <section class="slide">
-        <ul class="slide-list">
-          <li class="slide-item"><img src="./images/img1.jpg" alt="초원에서 뛰어노는 아이"></li>
-          <li class="slide-item"><img src="./images/img2.jpg" alt="청중을 향해 연설하는 남자"></li>
-          <li class="slide-item"><img src="./images/img3.jpeg" alt="스트레칭하는 사람들"></li>
-        </ul>
+
+    <main>
+      <section>
+        <div class="slide-wrapper">
+          <ul class="slide-list">
+            <li><img src="./images/img1.jpg" alt="슬라이드이미지1"></li>
+            <li><img src="./images/img2.jpg" alt="슬라이드이미지2"></li>
+            <li><img src="./images/img3.jpeg" alt="슬라이드이미지3"></li>
+          </ul>
+
+          <ul class="slide-btn">
+            <li class="btn1">첫번째</li>
+            <li class="btn2">두번째</li>
+            <li class="btn3">세번째</li>
+          </ul>
+        </div>
       </section>
-
-      <div class="box"></div>
-
-      <div class="btn-group">
-        <button class="btn1" type="button">첫번째</button>
-        <button class="btn2" type="button">두번째</button>
-        <button class="btn3" type="button">세번째</button>
-      </div>
     </main>
-    
+
+
     <footer>
-      <div class="gloobal-footer">
-        <div class="global-left">
-          <p><a href="">이용약관</a></p>
-          <p><a href="">개인정보 처리방침</a></p>
-          <p><a href="">이메일무단수집거부</a></p>
-        </div>
-        <div class="global-right">
+      <div class="footer-top">
+        <ul class="foot-left">
+          <li><a href="">이용약관</a></li>
+          <li><a href="">개인정보 처리방침</a></li>
+          <li><a href="">이메일무단수집거부</a></li>
+        </ul>
+
+        <div class="foot-right">
           <p>대표번호</p>
-          <p><a href="">031.5171.5289</a></p>
-          <span>&#40;평일 09:00 ~ 18:00&#41;</span>
+          <span class="number">031.5171.5289</span>
+          <span class="time">&#40;평일 09:00 ~ 18:00&#41;</span>
         </div>
       </div>
-      <div class="gloobal-footer-bottom">
-        <h1 class="logo"><img src="./images/logo_spot.svg" alt="logo"></h1>
-        <span>13488 경기도 성남시 분당구 대왕판교로 700 B동 102호&#40;삼평동, 코리아바이오파크&#41;</span>
-        <span>건강기능식품미래포럼</span>
-        <span>고유번호 &#58; 855&#45;80&#45;01319</span>
-        <span>대표자 &#58; 박영인</span>
+
+      <div class="footer-bottom">
+        <img src="./images/logo_spot.svg" alt="HSFF하단로고">
+        <ul>
+          <li>13488 경기도 성남시 분당구 대왕판교로 700 B동 102호&#40;삼평동, 코리아바이오파크&#41;</li>
+          <li>건강기능식품미래포험</li>
+          <li>고유번호 &#58; 855&#45;80&#45;01319</li>
+          <li>대표자 &#58; 박영인</li>
+        </ul>
         <p>Copyright&#169; 2017 Health Supplements Future Forum, All rights reserved.</p>
       </div>
     </footer>
 
-    <aside></aside>
-    <div class="overlay"></div>
+    <aside class="sidebar lg-hidden">
+      <button type="button" class="sidebar-btn">X</button>
+      <ul class="sidebar-list">
+        <li class="sidebar-item"><a href="">포럼소개</a></li>
+        <li class="sidebar-item"><a href="">포럼신청</a></li>
+        <li class="sidebar-item"><a href="">포럼활동</a></li>
+        <li class="sidebar-item"><a href="">정보마당</a></li>
+        <li class="sidebar-item"><a href="">고객센터</a></li>
+      </ul>
+    </aside>
 
   </div>
   <script src="./js/script.js"></script>
