--- a/20230711_HSFF실습/index.html
+++ b/20230711_HSFF실습/index.html
@@ -45,8 +45,8 @@
         <nav>
           <ul class="gnb-main-list lg-only">
             <li class="gnb-main-item">
+              <span class="square"></span>
               <a href="">포럼소개</a>
-              <div class="acbox"></div>
               <ul class="sub">
                 <li><a href="">취지문</a></li>
                 <li><a href="">주요사업</a></li>
@@ -56,31 +56,31 @@
               </ul>
             </li>
             <li class="gnb-main-item">
+              <span class="square"></span>
               <a href="">포럼신청</a>
-              <div class="acbox"></div>
               <ul class="sub">
                 <li><a href="">포럼공지</a></li>
                 <li><a href="">포럼일정 및 참가</a></li>
               </ul>
             </li>
             <li class="gnb-main-item">
+              <span class="square"></span>
               <a href="">포럼활동</a>
-              <div class="acbox"></div>
               <ul class="sub">
                 <li><a href="">포럼자료</a></li>
                 <li><a href="">포토갤러리</a></li>
               </ul>
             </li>
             <li class="gnb-main-item">
+              <span class="square"></span>
               <a href="">정보마당</a>
-              <div class="acbox"></div>
               <ul class="sub">
                 <li><a href="">e-News</a></li>
               </ul>
             </li>
             <li class="gnb-main-item">
+              <span class="square"></span>
               <a href="">고객센터</a>
-              <div class="acbox"></div>
               <ul class="sub">
                 <li><a href="">공지사항</a></li>
                 <li><a href="">자주하는 질문</a></li>
