--- a/20230711_HSFF실습/index.html
+++ b/20230711_HSFF실습/index.html
@@ -157,5 +157,7 @@
 
   </div>
   <script src="./js/menu.js"></script>
+  <script src="./js/sidebar.js"></script>
+  <script src="./js/slide.js"></script>
 </body>
 </html>
