--- a/20230710_Menu/menu2/index.html
+++ b/20230710_Menu/menu2/index.html
@@ -16,6 +16,63 @@
 <body>
   <div class="wrapper">
 
+    <!-- <ul class="main-wrapper">
+      <li class="main"><a href="">메인메뉴1</a></li>
+      <li class="main"><a href="">메인메뉴2</a></li>
+      <li class="main"><a href="">메인메뉴3</a></li>
+      <li class="main"><a href="">메인메뉴4</a></li>
+    </ul>
+    <div class="sub-wrapper">
+      <ul>
+        <li class="sub"><a href="">서브메뉴1</a></li>
+      </ul>
+      <ul>
+        <li class="sub"><a href="">서브메뉴1</a></li>
+        <li class="sub"><a href="">서브메뉴2</a></li>
+      </ul>
+      <ul>
+        <li class="sub"><a href="">서브메뉴1</a></li>
+        <li class="sub"><a href="">서브메뉴2</a></li>
+        <li class="sub"><a href="">서브메뉴3</a></li>
+      </ul>
+      <ul>
+        <li class="sub"><a href="">서브메뉴1</a></li>
+        <li class="sub"><a href="">서브메뉴2</a></li>
+        <li class="sub"><a href="">서브메뉴3</a></li>
+        <li class="sub"><a href="">서브메뉴4</a></li>
+      </ul>
+    </div> -->
+
+    <div class="gnb">
+      <div><a href="">메인메뉴1</a>
+        <div class="sub">
+          <div>서브메뉴1</div>
+        </div>
+      </div>
+      <div><a href="">메인메뉴2</a>
+        <div class="sub">
+          <div>서브메뉴1</div>
+          <div>서브메뉴2</div>
+        </div>
+      </div>
+      <div><a href="">메인메뉴3</a>
+        <div class="sub">
+          <div>서브메뉴1</div>
+          <div>서브메뉴2</div>
+          <div>서브메뉴3</div>
+        </div>
+      </div>
+      <div><a href="">메인메뉴4</a>
+        <div class="sub">
+          <div>서브메뉴1</div>
+          <div>서브메뉴2</div>
+          <div>서브메뉴3</div>
+          <div>서브메뉴4</div>
+        </div>
+      </div>
+    </div>
+
+    
   </div>
   <script src="./JS/script.js"></script>
 </body>
