--- a/20230710_Menu/menu2/index.html
+++ b/20230710_Menu/menu2/index.html
@@ -43,34 +43,34 @@
       </ul>
     </div> -->
 
-    <div class="gnb">
-      <div><a href="">메인메뉴1</a>
-        <div class="sub">
-          <div>서브메뉴1</div>
-        </div>
-      </div>
-      <div><a href="">메인메뉴2</a>
-        <div class="sub">
-          <div>서브메뉴1</div>
-          <div>서브메뉴2</div>
-        </div>
-      </div>
-      <div><a href="">메인메뉴3</a>
-        <div class="sub">
-          <div>서브메뉴1</div>
-          <div>서브메뉴2</div>
-          <div>서브메뉴3</div>
-        </div>
-      </div>
-      <div><a href="">메인메뉴4</a>
-        <div class="sub">
-          <div>서브메뉴1</div>
-          <div>서브메뉴2</div>
-          <div>서브메뉴3</div>
-          <div>서브메뉴4</div>
-        </div>
-      </div>
-    </div>
+    <!-- <div class="gnb">
+      <ul><a href="">메인메뉴1</a>
+        <li class="sub">
+          <p><a href="">서브메뉴1</a></p>
+        </li>
+      </ul>
+      <ul><a href="">메인메뉴2</a>
+        <li class="sub">
+          <p><a href="">서브메뉴1</a></p>
+          <p><a href="">서브메뉴2</a></p>
+        </li>
+      </ul>
+      <ul><a href="">메인메뉴3</a>
+        <li class="sub">
+          <p><a href="">서브메뉴1</a></p>
+          <p><a href="">서브메뉴2</a></p>
+          <p><a href="">서브메뉴3</a></p>
+        </li>
+      </ul>
+      <ul><a href="">메인메뉴4</a>
+        <li class="sub">
+          <p><a href="">서브메뉴1</a></p>
+          <p><a href="">서브메뉴2</a></p>
+          <p><a href="">서브메뉴3</a></p>
+          <p><a href="">서브메뉴4</a></p>
+        </li>
+      </ul>
+    </div> -->
 
     
   </div>
