--- a/20230710_Menu/menu2/index.html
+++ b/20230710_Menu/menu2/index.html
@@ -16,6 +16,53 @@
 <body>
   <div class="wrapper">
 
+    <header>
+      <nav>
+        <h1 class="visually-hidden">메뉴</h1>
+        <ul class="main-menu">
+          <!-- li*4>a{메인메뉴$} $넘버링 -->
+          <li><a href="">메인메뉴1</a></li>
+          <li><a href="">메인메뉴2</a></li>
+          <li><a href="">메인메뉴3</a></li>
+          <li><a href="">메인메뉴4</a></li>
+        </ul>
+        <div class="submenu-wrapper">
+          <ul class="submenu-list">
+            <li>
+              <ul class="sub">
+                <li><a href="">서브메뉴1</a></li>
+              </ul>
+            </li>
+            <li>
+              <ul class="sub">
+                <li><a href="">서브메뉴2</a></li>
+                <li><a href="">서브메뉴2</a></li>
+              </ul>
+            </li>
+            <li>
+              <ul class="sub">
+                <li><a href="">서브메뉴3</a></li>
+                <li><a href="">서브메뉴3</a></li>
+                <li><a href="">서브메뉴3</a></li>
+              </ul>
+            </li>
+            <li>
+              <ul class="sub">
+                <li><a href="">서브메뉴4</a></li>
+                <li><a href="">서브메뉴4</a></li>
+                <li><a href="">서브메뉴4</a></li>
+                <li><a href="">서브메뉴4</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+
+
+    <!-- 상단/하단 메뉴 나눔 -->
+
     <!-- <ul class="main-wrapper">
       <li class="main"><a href="">메인메뉴1</a></li>
       <li class="main"><a href="">메인메뉴2</a></li>
@@ -42,6 +89,10 @@
         <li class="sub"><a href="">서브메뉴4</a></li>
       </ul>
     </div> -->
+
+
+
+    <!-- 계단식 -->
 
     <!-- <div class="gnb">
       <ul><a href="">메인메뉴1</a>
