--- a/20230711_HSFF실습/index.html
+++ b/20230711_HSFF실습/index.html
@@ -156,14 +156,14 @@
     </aside> 
 
 
-    <div class="modal">
-      <button class="modal-btn" type="button">X</button>
+    <div class="popup">
+      <button class="popup-btn" type="button"></button>
       <h2>Food supplements and Biomaterials for Health</h2>
       <img src="./images/논문공모.png" alt="논문공모">
-      <button class="modal-nav" type="button">내용 자세히 보기</button>
+      <button class="popup-nav" type="button">내용 자세히 보기</button>
       <p>
-        <input id="modal-chk" type="checkbox">
-        <label for="modal-chk"></label>
+        <input id="popup-chk" type="checkbox">
+        <label for="popup-chk"></label>
         <span>오늘 하루 열지 않음</span>
       </p>
     </div>
