📝 style copy 2 연결

--- a/20230711_HSFF실습/index.html
+++ b/20230711_HSFF실습/index.html
@@ -15,6 +15,7 @@
 
   <title>HSFF 실습</title>
   <link rel="stylesheet" href="./style.css">
+  <!-- <link rel="stylesheet" href="./style copy 2.css"> -->
 </head>
 <body>
   <div class="wrapper">
@@ -173,6 +174,7 @@
       </div>
     </div>
 
+    <!-- style copy 2 -->
     <!-- <div class="popup">
       <button class="popup-btn" type="button"></button>
       <h2>Food supplements and Biomaterials for Health</h2>
