✨ Hex code로 랜덤 배경색 변경 기능 구현

--- a/Javascript/20230718setTimeout setInterval/index.html
+++ b/Javascript/20230718setTimeout setInterval/index.html
@@ -13,6 +13,6 @@
   <div class="wrapper">
     <p class="count"> 1초마다 배경색 바꾸기</p>
   </div>
-  <script src="./script.js"></script>
+  <script src="./JS/script.js"></script>
 </body>
 </html>
