📝 setInterval 랜덤 배경색 바꾸기 마크업

--- a/Javascript/20230718setTimeout setInterval/index.html
+++ b/Javascript/20230718setTimeout setInterval/index.html
@@ -6,12 +6,17 @@
   <meta name="description" content="setTimeout, setInterval">
   <meta name="keywords" content="html, CSS, javascript">
   <meta name="author" content="kai">
-  <title>1초마다 랜덤으로 배경색 바꾸기</title>
+  <!-- <title>1초마다 랜덤으로 배경색 바꾸기</title> -->
+  <title>숫자 카운트하면서 랜덤 배경색 변경</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="wrapper">
-    <p class="count"> 1초마다 배경색 바꾸기</p>
+    <!-- <p class="count">1초마다 배경색 바꾸기</p> -->
+    <p class="count">
+      <span class="num">5</span>
+      초마다 배경색 바꾸기
+    </p>
   </div>
   <script src="./JS/script.js"></script>
 </body>
