--- a/Javascript/20230718setTimeout setInterval/index.html
+++ b/Javascript/20230718setTimeout setInterval/index.html
@@ -18,6 +18,7 @@
       초마다 배경색 바꾸기
     </p>
   </div>
-  <script src="./JS/script.js"></script>
+  <!-- <script src="./JS/script.js"></script> -->
+  <script src="./JS/script copy.js"></script>
 </body>
 </html>
